# CDS

./: README.md
coffee_data_scraper/: .env  pyproject.toml
coffee_data_scraper/src/coffee_data_scraper/: main.py
coffee_data_scraper/src/coffee_data_scraper/coffee_crawler/: scrapy.cfg
coffee_data_scraper/src/coffee_data_scraper/coffee_crawler/coffee_crawler/: items.py  middlewares.py  pipelines.py  settings.py
coffee_data_scraper/src/coffee_data_scraper/coffee_crawler/coffee_crawler/spiders/: coffe_spider.py
coffee_data_scraper/src/coffee_data_scraper/infrastructure/config/: settings.py
coffee_data_scraper/src/coffee_data_scraper/utils/: coffee_builder.py
